creating the DOM maniplations by using JS

--- a/index.html
+++ b/index.html
@@ -2,30 +2,31 @@
 <html>
 <head>
   <meta charset=UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="main.css">
+   <meta name="viewport" content="width=device-width,initial-scale=1">
+       <title></title>
+    <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
+    <h1>profile cards</h1>
     <div class="mainDiv">
-      <div class="sub1">
+      <div class="sub1" onclick="newpage();">
 <img src="images/3.jpg"alt=""class="image1">
 <h1>kajal</h1>
       </div>
 
-       <div class="sub2">
- <img src="images/2.jpg"alt=""class="image2">
-    <h1>anushka</h1>
+       <div class="sub2" onclick="sampleFunction();">
+ <img src="images/2.jpg"alt=""class="image1">
+    <h1>kalyani</h1>
        </div>
 
-        <div class="sub3">
+        <div class="sub3" onclick="newpage();">
            <img src="images/1.jpg"alt=""class="image1">
 <h1>samantha</h1>
 </div>
 
          </div>
 
+<script type="text/javascript" src="main.js">
 
-
-
+</script>
 </body></html>
