--- a/sample.html
+++ b/sample.html
@@ -2,16 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title></title>
-    <script src="main.js">
-
-  
+<link rel="stylesheet" href="resume.css">
   </head>
   <body>
+<div class="mainDiv" id="mainDiv">
+  <div class="leftDiv"id="lefftDiv">
+  </div>
+  <div class="rightDiv"id="rightDiv">
+  </div>
 
-    <p id="data"></p>
-    <script src="main.js">
-
-      </script>
+</div>
+<script src="main.js">
+</script>
   </body>
 </html>
